css/map.css
@font-face {
	font-family: "GoogleSans";
	src: url("../fonts/GoogleSans-Medium.ttf");
}

:root {
	--material-grey: rgb(51, 68, 85);
	--material-grey-dark: rgb(55, 71, 79);
	--material-white: rgb(216, 237, 255);
	--material-red: rgb(255, 59, 48);
	--material-red-light: tomato;
	--material-blue: dodgerblue;
	--material-green: rgb(0, 166, 81);
	--material-yellow: rgb(255, 204, 0);
	--material-teal: rgb(0, 150, 136);

	--divider-color: rgb(114, 114, 114);
}

* {
	scroll-behavior: smooth;
}

body {
	padding: 0;
	margin: 0;
	display: flex;
	justify-content: center;
	align-items: center;
	flex-direction: column;
	/* background: var(--material-white) !important; */
	background-image: linear-gradient(to left, var(--material-white), #90a4ae) !important;
	font-family: "GoogleSans";
}

.navbar-fixed {
	width: 100% !important;
}

nav {
	background-color: rgba(55, 71, 79, 0.6) !important;
	width: 100%;
	border-radius: 50px;
	backdrop-filter: blur(5px);
}

.nav-wrapper {
	margin-left: 11vw !important;
	margin-right: 11vw !important;
}

#nav-mobile > li:nth-child(8) > div > label {
	color: white;
}

a {
	border-radius: 30px !important;
}

a:hover {
	border-radius: 10px !important;
	transition: linear 0.2s;
}

button {
	border-radius: 30px !important;
}

button:hover {
	border-radius: 10px !important;
	transition: linear 0.2s;
}

canvas {
	border-radius: 30px;
	cursor: pointer;
}

canvas:active {
	cursor: grab;
}

.divider {
	background-color: var(--divider-color);
}

.dark {
	background: var(--material-grey) !important;
	color: var(--material-white);
}

.modal__dark {
	background-color: var(--material-grey);
}

.modal-footer__dark {
	background-color: var(--material-grey) !important;
}

.modal-footer a {
	color: var(--divider-color) !important;
}

.heading {
	margin-bottom: 40px;
}

.sidenav__li {
	margin: 20px;
	font-size: 15px;
	color: var(--material-red);
	font-weight: 500;
}

.helpText {
	font-size: 1.2rem;
}

.src {
	color: var(--material-green);
}

.dest {
	color: var(--material-blue);
}

.return {
	color: var(--material-red);
}

.reset {
	color: var(--material-yellow);
}

.toggle {
	color: var(--material-teal);
}

/* MapBody Style Starts */
.row {
	display: flex;
	justify-content: center;
	margin-top: 25px;
}

.map-container {
	border-radius: 30px;
	width: 55vw; /* size of container */
	height: 84vh; /* size of container */
	overflow: scroll; /* Overflows the map */
}

/* ::-webkit-scrollbar {
	width: 0;
} */

body > div > div.col.s7 {
	display: flex;
	justify-content: center;
	align-items: center;
}

footer {
	border-radius: 60px;
	margin-bottom: 50px !important;
}

#aboutus > div.footer-copyright {
	border-bottom-left-radius: 60px !important;
	border-bottom-right-radius: 60px !important;
}

.carousel {
	margin-left: 5%;
}

.card {
	border-radius: 30px;
}

.card:hover {
	border-radius: 10px;
	transition: linear 0.2s;
}

.dropdown-content.select-dropdown {
	border-radius: 30px;
	background-color: rgba(181, 197, 211, 0.6) !important;
	backdrop-filter: blur(6px) !important;
}

.pre-loader {
	position: fixed;
	top: 0;
	left: 0;
	width: 100%;
	height: 100%;
	z-index: 9999 !important;
	background-color: rgba(0, 0, 0, 0.05);
	backdrop-filter: blur(5px);
}

lottie-player {
	width: 100%;
	height: 100%;
}

#modal1 {
	border-radius: 40px !important;
	background-color: rgba(255, 255, 255, 0.35) !important;
	backdrop-filter: blur(6px) !important;
}

